# llama-herd

./: .gitignore  Cargo.toml  GEMINI.md  README.md  build.rs  index.html  script.js  styles.css
.antigravitycli/: 4a46a757-0aa4-4f18-b89a-29c17397aaf2.json
.cargo/: config.toml
.github/workflows/: rust.yml
docs/: architecture.md  configuration.md  theming.md
docs/plan/: implementation_plan.md
src/: cli.rs  config.rs  discovery.rs  launcher.rs  lib.rs  main.rs  setup.rs
src/tui/: app.rs  logs.rs  mod.rs  picker.rs  theme.rs  ui.rs
tests/: audit_tests.rs  cli.rs  config.rs  discovery.rs  edge_cases.rs  launcher.rs  lib.rs  main.rs  tui_tests.rs
tests/tui/: app.rs  logs.rs  picker.rs  ui.rs
