[package]
name = "llama-herd"
version = "1.0.9"
edition = "2024"
description = "A native Rust TUI and CLI companion for orchestrating, pairing, and routing local LLM services driven by llama.cpp's llama-server."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rpr13/llama-herd"
homepage = "https://github.com/rpr13/llama-herd"
readme = "README.md"
exclude = [
    "/.antigravitycli",
    "/target",
    "/.idea",
    "/.git",
    "/.github"
]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4.0"
regex = "1.10"
toml = "1.1.2"
sysinfo = "0.31"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }
